objects/smlfcom__SML_Screen_Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__ShowComparisions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ShowComparisions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__ShowCustomPipeline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ShowCustomPipeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__ShowCustomWaterfall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ShowCustomWaterfall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__ShowDataSources__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ShowDataSources</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__ShowForecastDetails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ShowForecastDetails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__ShowForecastView__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ShowForecastView</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__ShowForecast__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ShowForecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__ShowGettingStarted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ShowGettingStarted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__ShowInsightConfiguration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ShowInsightConfiguration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__ShowInsightsCohort__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ShowInsightsCohort</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__ShowInsightsDuration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ShowInsightsDuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__ShowInsightsOpportunity__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ShowInsightsOpportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__ShowOpportunityRisk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ShowOpportunityRisk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__ShowPipelineChanges__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ShowPipelineChanges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__ShowPipleineFlow__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ShowPipleineFlow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__ShowProjections__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ShowProjections</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__ShowRulesConfig__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ShowRulesConfig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__ShowTrendingLine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ShowTrendingLine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__Show_What_If__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show What If</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__showQuarterlySummary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>showQuarterlySummary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__show_Pipeline_coverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>show_Pipeline_coverage</label>
        <type>Checkbox</type>
    </fields>
    <label>SML Screen Configuration</label>
</CustomObject>